[Database] Index - 박성우 (참고 추가)

--- a/Database/Index/박성우.md
+++ b/Database/Index/박성우.md
@@ -106,3 +106,10 @@ B-Tree 를 사용한 인덱스를 통해 SELECT 성능이 향상된다!
 2. where, join, order by 절에 자주 사용되는 컬럼
 3. INSERT/UPDATE/DELETE가 자주 발생하지 않는 컬럼
 4. 규모가 큰 테이블
+
+
+[참고]
+
+[[10분 테코톡] 라라, 제로의 데이터베이스 인덱스](https://www.youtube.com/watch?v=edpYzFgHbqs)
+
+면접을 위한 CS 전공지식 
