[Database] Index - 조윤호 (수정)

--- a/Database/Index/조윤호.md
+++ b/Database/Index/조윤호.md
@@ -1,55 +1,61 @@
-# HTTP(hypertext transfer protocol)
-- 웹의 Application Layer protocol
-- 클라이언트 / 서버 모델을 기반으로 함
-	- 클라이언트 : 요청하고, 응답을 받는 주체
-	- 서버 : 요청 이후 정보를 처리하여 응답을 반환하는 주체
-- 단위 : Packet
-- req, res로 구분됨
-- TCP 상에서 동작
-	- 1. client : 80포트를 통해 TCP connection 
-	- 2. server : TCP connection 수락
-	- 3. http 메시지 교환
-	- 4. TCP 연결 종료
+# index
+- 데이터를 정렬하여 탐색 속도를 빠르게 한다!
+
+# 알고리즘
+## 1. B-tree (Balanced tree)
+- 트리의 높이가 같다.
+- 자식 노드를 2개 이상 가질 수 있다.
+- 각 노드 - 1 페이지(8kB)의 데이터 용량 차지
+
+![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/9994580a-1f4c-4d29-9a52-b6823d572eb7)
+- 루트 페이지 : 자식 페이지의 범위 정보와, 자식 페이지 주소
+- 브랜치 페이지 : 자식 페이지의 범위 정보와, 자식 페이지 주소
+- 리프 페이지 : 실제 데이터 페이지 or 실제 데이터의 주소 페이지
+
+장점
+- 조회 성능 향상
+
+단점
+- 불필요한 처리량 증가
+- 페이지 낭비, 인덱스 조각화
+
+### insert
+1. 해당 영역의 페이지에 빈 공간이 있는 경우, 빈 공간에 데이터를 저장한다.
+2. 해당 영역의 페이지가 꽉 찬 경우 -> 페이지 분할
+	1. 빈 페이지 생성
+	2. 기존 페이지와 새 페이지의 데이터를 나누어 저장
+### delete
+- 실제 컬럼 삭제 x, 대신 비활성화한다.
+### update
+- delete 후 insert
+
+## B+ tree
+- 리프 페이지에만 주요 데이터 담기는 자료구조
+- 같은 높이의 sibling 노드 간 "링크드 리스트" 구조로 연결됨 -> 범위 탐색에 용이 
+![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/c970cd01-db96-4b03-b947-47befdfe93f8)
 
 
-### persistent vs non-persistent http
-- non-persistent http
-	- 하나의 TCP 커넥션에서 단 한번만 http 통신
-- persistent 
-	- 하나의 TCP 커넥션 상에서 여러 차례 http 통신
-	- 현대에 주로 사용하는 방식!
+# clustering, non-clustering
+- clustering index : 실제 데이터를 정렬
+- non-clustering index : 실제 데이터와 별도로 정렬
 
-- ex) 10개의 이미지를 받을 경우
-	- non-persistent http : 10번 커넥션
-	- persistent : 1번 커넥션
+### clustering index 선정 우선순위
+1. primary key가 있는 경우
+2. unique + not null인 컬럼이 있는 경우
 
-### 통신성능 측정 : RTT
-- RTT(round trip time) : 하나의 전송이 다녀오는 "최소 시간"
-	- "작은 packet"이 전송되는 시간
-	- 파일 전송 등의 부가적 전송시간은 제외함
-- total transmission time : 2RTT + file transmission time
-	- TCP handshaking 1RTT + http 1RTT + file transmission
-![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/36ee7345-11d4-4a4f-b06b-1fc2f3ad819d)
+### non-clustering index 선정 조건
+1. unique 컬럼인 경우 자동 생성됨
+2. 수동으로 생성하기
+	- `CREATE UNIQUE INDEX index_name ON member (name)`
+	- `CREATE INDEX index_name ON member (name)`
 
-
-# Request Message
-- HTTP spec : RFC 1945, RFC 2616, RFC 7540
-![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/fbe8a0be-07a6-4085-bfe0-ea51e0ad60f4)
+# 인덱스 선정 기준
+1. Cardinality : 중복도 낮은 데이터
+- good : 전화번호, id 등
+- bad : 성별, 학년 등
+2. `WHERE JOIN ORDER BY` 자주 발생
+3. INSERT UPDATE DELETE 적은
+4. 규모가 큰
 
 
-### Mehod
-- GET : request object
-- POST : fills out the form
-- HEAD : GET과 동일, 하지만 body 없이 head만 전송됨
-- PUT : upload file
-- DELETE : delete file
-- ...
 
-# Response Message
-![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/4b079e09-bdb7-4fdf-bc9a-2ed74cd895f7)
-
-### status code
-- 200 OK
-- 400 BAD REQ
-- 404 NOT FOUND
-- 5XX
