[Network] Http - 박찬호

--- a/Network/HTTP/박찬호.md
+++ b/Network/HTTP/박찬호.md
@@ -1,301 +1,235 @@
-# 인덱스(Index)
+# HTTP
 
-# Basic concepts
+**HTTP**: 웹에서 이뤄지는 모든 데이터 교환을 담당하는 클라이언트-서버 구조의 프로토콜. TCP 계층 위에서 동작하는 Application 레이어의 프로토콜이다.
 
-**Indexing**: 원하는 data에 빠르게 접근하기 위한 기술
+## HTTP 흐름
 
-- **record** : **index entry** 라고도 하며 특정 entitiy에 속한 filed들의 group이다.
-- **Search Key** : record를 찾기 위해 사용되는 attribute
-- **Index file** : record로 구성되며, 구조는  [search key][pointer]
-- **Ordered indices** : 정렬된 순서로 search key가 저장
-- **Hash indices** : ’hash function’을 통해 search key가 균등하게 분포되어 ‘bucket’의 주소를 가리킴
+클라이언트가 서버와 통신하고자 할 때, 최종 서버가 됐든 중간 프록시가 됐든 다음 단계의 과정을 수행한다.
 
-## Indexing vs Hashing
+1. TCP 연결을 연다. TCP 연결은 요청을 보내거나(혹은 여러 개의 요청) 응답을 받는데 사용된다. 
+2. HTTP 메시지를 전송한다. (아래 HTTP Request 구조 참고)
 
-인덱스와 해싱 모두 데이터베이스에서 데이터 검색 속도를 높이는 중요한 메커니즘이지만, 둘 사이에는 몇 가지 주요한 차이점이 있다.
+    ```c
+    GET / HTTP/1.1
+    ------------------------------
+    Host: developer.mozilla.org
+    Accept-Language: fr
+    ------------------------------
+    ```
 
-1. **데이터 구조**: 인덱스는 트리 기반의 데이터 구조 (예를 들어 B-Tree, B+ Tree)를 사용하여 데이터를 저장한다. 이는 데이터를 정렬된 순서로 유지하므로 범위 쿼리에 매우 효과적이다. 반면에 해시는 키를 해시 함수에 통과시켜 생성된 해시 값을 이용한다. 이 해시 값은 데이터 항목을 찾는 데 사용되며, 이는 빠른 검색을 가능하게 한다. 그러나 해싱은 순서를 유지하지 않기 때문에 범위 쿼리에 비효율적이다.
-2. **속도**: 해싱은 일반적으로 키-값 쌍을 바탕으로 O(1)의 시간 복잡도로 특정 데이터를 검색할 수 있어서 매우 빠르다고 할 수 있다. 반면에 인덱스는 일반적으로 로그 시간 복잡도를 가지므로 큰 데이터 세트에서는 해싱보다 상대적으로 느릴 수 있다.
-3. **중복**: 인덱스는 중복 값을 허용하지만, 해시 테이블에서는 같은 해시 값을 가지는 중복 키가 문제가 될 수 있다. 이를 '해시 충돌'이라 하며, 이를 해결하기 위한 별도의 메커니즘이 필요하다.
-4. **용도**: 인덱싱은 정렬된 데이터를 저장하고 관리하며, 데이터베이스의 조인 연산, 정렬 연산에 효율적이다. 반면에 해싱은 특정 키를 통해 빠르게 데이터를 찾는 것에 최적화되어 있다.
+3. 서버에 의해 전송된 응답을 읽어들인다. (아래 HTTP Response 구조 참고)
 
-요약하자면, 인덱스와 해싱 모두 데이터 검색 속도를 향상시키는 데 사용되지만, 구현 방식과 사용 사례에 따라 선호되는 경우가 다르다. **범위 쿼리나 정렬된 데이터가 필요한 경우에는 인덱스를, 특정 키를 통해 데이터를 빠르게 찾아야 하는 경우에는 해싱을 사용하는 것이 바람직하다.**
+    ```c
+    HTTP/1.1 200 OK
+    --------------------------------------
+    Date: Sat, 09 Oct 2010 14:28:02 GMT
+    Server: Apache
+    Last-Modified: Tue, 01 Dec 2009 20:18:22 GMT
+    ETag: "51142bc1-7449-479b075b2891b"
+    Accept-Ranges: bytes
+    Content-Length: 29769
+    Content-Type: text/html
+    ---------------------------------------
+    <!DOCTYPE html... (here comes the 29769 bytes of the requested web page)
+    ```
 
-## key vs index
+4. 연결을 닫거나 다른 요청들을 위해 재사용한다.
 
-데이터베이스에서 '키(Key)'와 '인덱스(Index)'는 비슷하게 들릴 수 있지만, 역할과 용도는 다르다.
+### HTTP Requst/Response 구조 (참고)
 
-1. **키(Key)**: 키는 데이터베이스 테이블의 레코드를 고유하게 식별하거나, 레코드 간의 관계를 정의하는 데 사용되는 필드 또는 필드의 조합이다. 예를 들어, 주민등록번호, 학번 등은 고유한 식별자 역할을 하는 키가 될 수 있다. 이와 같은 키를 '기본 키(Primary Key)'라고 하며, 테이블의 각 레코드를 고유하게 식별한다. 또한 '외래 키(Foreign Key)'는 다른 테이블의 레코드와 관계를 정의하는데 사용된다.
-2. **인덱스(Index)**: 인덱스는 데이터베이스에서 데이터를 더 빠르게 검색하고 접근할 수 있도록 돕는 데이터 구조다. 책의 색인과 유사하게, 데이터베이스의 인덱스는 특정 필드에 대한 포인터 또는 참조를 제공하여 해당 데이터를 더 빠르게 찾을 수 있게 한다. 인덱스는 특정 키 또는 키의 조합에 대해 생성될 수 있으며, 이 키는 인덱스를 구성하는 필드가 된다.
+HTTP Request와 Response의 구조는 서로 닮았다.
 
-따라서, 키는 데이터의 고유성과 레코드 간의 관계를 보장하는 반면, 인덱스는 검색 속도와 성능 최적화에 주로 사용된다. 또한 모든 키가 인덱스가 되는 것은 아니며, 필요에 따라 인덱스를 생성하고 관리한다.
+- start-line에는 실행되어야 할 요청 또는 요청 수행에 대한 결과가 기록되며 항상 1줄이다.
+- 헤더 정보에는 요청에 대한 설명 혹은 메시지 본문에 대한 설명이 들어간다.
+- 그 이후에는 요청에 대한 모든 메타 정보 (start-line + headers)가 끝났음을 알리는 빈 줄이 들어감
+- Body에는 요청 혹은 응답과 관련된 내용이 들어간다. 즉, 요청할 때는 서버에게 전달할 값을 넣거나, 응답으로 올 때는 서버로 부터 전달받은 내용이 들어간다.
 
-⇒ 따라서, index file의 구조 : **[search key][pointer]**
+### 0. 공통 Header
 
-# Ordered Indices
+**Date** : 현재시간
 
-ordered indices에서는 index entries들이 search key 값에 따라 정렬되어 저장된다.
+**Cache-Control** : 캐시 제어
 
-### 1. clustering index (= primary index)
+**+ no-store** : 캐시를 저장하지 않겠다
 
-- table space에서 row들이 물리적으로 어떻게 정렬될 지 (clustered) 결정하는 index
-- 즉, sequentially ordered file에서 정렬의 기준이 되는 index이다.
-- 테이블 당 한 개만 존재 가능
-- 보통 primary key가 clustering index이지만, 반드시 그렇지는 않다.
+**+ no-cache** : 모든 캐시를 쓰기 전에 서버에 해당 캐시를 사용해도 되는지 확인하겠다
 
-책으로 비유하면, **페이지를 알고 있어서 바로 해당 페이지를 펼치는 것과 같다.**
+**+ must-revalidate** : 만료된 캐시만 서버에 확인하겠다.
 
-### 2. non-clustering index (= secondary index)
+**+ public** : 공유 캐시에 저장해도 된다.
 
-- index의 search key의 순서가 정렬되지 않은 index
-- 검색 속도는 느리지만, 데이터의 입력/수정/삭제는 더 빠르다.
-- 테이블 당 여러 개 존재 가능
+**+ private** : '브라우저' 같은 특정 사용자 환경에만 저장하겠다.
 
-책으로 비유하면, **목차에서 찾고자 하는 내용의 페이지를 찾고 나서 해당 페이지로 이동하는 것과 같다.**
+**+ max-age** : 캐시의 유효시간을 명시하겠다.
 
-### Clustering Index VS Non-Clustering Index
+**Transfer-Encoding** : Body 내용 자체 압축 방식을 지정
 
-1. **Clustering Index**: 클러스터링 인덱스는 **데이터베이스 테이블의 물리적인 정렬 방식을 결정**한다. **테이블의 행은 클러스터링 인덱스를 기반으로 정렬되고,** 테이블 당 하나만 생성할 수 있으며, 테이블의 행 자체를 재정렬한다.
-2. **Non-Clustering Index**: 비클러스터링 인덱스(또는 보조 인덱스라고도 함)는 **테이블의 물리적인 정렬에 영향을 미치지 않는다**. 대신 이 인덱스는 인덱스 키에 따라 **별도의 공간에 정렬된 테이블의 포인터 또는 참조를 유지**한다. 비클러스터링 인덱스는 테이블 당 여러 개를 가질 수 있다. 비클러스터링 인덱스를 사용하면 특정 키 값을 기반으로 데이터를 빠르게 찾을 수 있지만, 범위 쿼리나 정렬된 데이터를 검색하는 데는 클러스터링 인덱스보다 비효율적일 수 있다.
+**Content-Encoding** : Body의 리소스 압축 방식 (Transfer-Encoding은 Body 자체이므로 다름)
 
-**요약하자면, 클러스터링 인덱스는 테이블의 물리적 정렬을 결정하며 테이블 당 하나만 생성할 수 있으나, 비클러스터링 인덱스는 테이블의 물리적 정렬에는 영향을 주지 않으며 테이블 당 여러 개를 생성할 수 있다.**
+**Content-type** : Body의 미디어 타입 ex) application/json, text/html
 
-## Dense Index Files
+**Content-Length** : Body의 길이
 
-이 경우, index file에 없으면 data file에도 없다.
+**Content-language** : Body를 이해하는데 가장 적절한 언어 ex) ko
 
-- Dense index : Index record가 모든 search-key 값에 대해서 나타나는 경우
-![image](https://blog.kakaocdn.net/dn/pr9jO/btrN5E98bHU/UsXkI1bGmhcMXRTCqbPSRK/img.png)
+**Connection** : 클라이언트와 서버의 연결 방식 설정
 
-그림 상 왼쪽이 ‘Index file’, 오른쪽이 ‘data file’이다.
+### 1. Http Request
 
-위에서 설명하였듯이 index filed의 구조는 search key와 pointer로 이뤄진다.
+- **Start Line**
+- **Headers**
+- **Body**
 
-- 꼭 index file과 data file의 search key가 1:1로 존재하지는 않는다.
+    ![img1.daumcdn.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3a7ae2ae-9b5c-4888-96e5-dfcb640fa80c/img1.daumcdn.png)
 
-![image](https://blog.kakaocdn.net/dn/bSrZ0v/btrOceWV3gJ/7KGRuRBuSNklKs5twcQFH1/img.png)
 
-이 경우 학과 이름이 search key인 경우일 것이다.
+### 1-1 start line
 
-## Sparse Index Files
+HTTP request의 start line 3가지 부분으로 구성
 
-이 경우 dense index와 달리 index file은 일부의 search key만이 존재하여 index file에 없더라도 data file에서 등장할 수 있습니다.
+- HTTP method
+- Request target
+- HTTP version
 
-- **Sparse index** : Index record가 일부 search-key 값에 대해서만 나타나는 경우
+```java
+GET /test.html HTTP/1.1
+[HTTP Method] [Request target] [HTTP version]
+```
 
-![image](https://blog.kakaocdn.net/dn/bcV26L/btrOgSS3nFz/6o1uy0bbGZuozLVBm7yLe1/img.png)
+- **HTTP method**: 요청의 의도를 담음 - ( GET, POST, PUT, DELETE,PATCH)
+- **Request target:**  destination의 주소
+- **HTTP version :** version에 따라 Request 메시지 구조나 데이터가 다를 수 있어서 명시
 
-## Dense vs Sparse
+### 1-2 Headers
 
-1. **Dense Index**: Dense Index는 **테이블의 모든 행에 대해 인덱스 항목**을 가진다. 즉, 테이블의 각 행은 인덱스에 대응하는 항목을 가지므로 인덱스는 "밀도가 높다(dense)"고 말한다. 이러한 특성 때문에 Dense Index는 **특정 행에 대한 직접 접근을 빠르게 하지만, 인덱스 자체의 크기가 크므로 관리 비용이 높을 수 있다.**
-2. **Sparse Index**: Sparse Index는 **테이블의 일부 행에 대해서만 인덱스 항목**을 가진다. 일반적으로 Sparse Index는 블록 또는 데이터 페이지의 첫 번째 레코드에 대한 항목만을 가진다. 이런 방식은 인덱스의 크기를 크게 줄여 **메모리를 효율적으로 사용**할 수 있게 하지만, Dense Index에 비해 특정 레코드를 찾는 데 더 **많은 시간이 소요**될 수 있다.
+해당 request에 대한 추가 정보(addtional information)를 담고 있는 부분
 
- Dense Index는 빠른 접근을 제공하지만 더 많은 저장 공간을 사용하며, Sparse Index는 저장 공간을 절약하지만 접근 시간이 약간 느릴 수 있다.
+headers도 크게 3가지 부분으로 나뉨
 
-## Secondary Indices ⇒ 무조건 dense index
+- general headers
+- request headers
+- entity headers
 
-![image](https://blog.kakaocdn.net/dn/cAePQp/btrN78QqERp/jOcOyg1YvD8FmcRAWLVXak/img.png)
+```java
+Host: google.com
+Accept: text/html
+Accept-Encoding: gzip, deflate
+Connection: keep-alive
+...
+```
 
-- **bucket** : Index file은 bucket의 주소를 가리키고, bucket에는 record의 주소가 들어있다.
-- secendary index는 무조건 dense index이다.
-- Non-clustering과 같은 의미이다.
-    - 즉, 데이터의 물리적인 정렬에 영향을 미치지 않지만, 빠른 검색을 위한 참조를 제공
+- `Host` 요청하려는 서버 호스트 이름과 포트번호
+- `User-agent` 클라이언트 프로그램 정보
+- `Referer` 바로 직전에 머물렀던 웹 링크 주소
+- `Accept` 클라이언트가 처리 가능한 미디어 타입 종류 나열
+- `If-Modified-Since` 여기에 쓰여진 시간 이후로 변경된 리소스 취득.
+- `Authorization` 인증 토큰을 서버로 보낼 때 쓰이는 Header
+- `Origin` 서버로 Post 요청을 보낼 때 요청이 어느 주소에 시작되었는지 나타내는 값. 이 값으로 요청을 보낸 주소와 받는 주소가 다르면 **CORS(Cross-Origin Resource Sharing) 에러가 발생한다.**
+- `Cookie` 쿠키 값이 key-value로 표현된다.
 
-Secondary Index는 다음과 같은 경우에 유용하다:
+### 1-3 Body
 
-1. **자주 조회되는 칼럼**: 특정 칼럼이 자주 조회되는 경우, 해당 칼럼에 대해 Secondary Index를 생성하면 검색 성능을 향상시킬 수 있다.
-2. **복잡한 쿼리의 성능 향상**: 여러 테이블을 JOIN하는 복잡한 쿼리의 성능을 향상시키는 데에도 Secondary Index가 유용하다. 해당 칼럼에 대한 Index가 있으면, 데이터베이스는 해당 칼럼의 값을 빠르게 찾을 수 있다.
+HTTP Request가 전송하는 데이터를 담고 있는 부분
 
-## Multilevel Index
+```java
+{
+    "test_id": "tmp_1234567",
+    "order_id": "8237352"
+}
+```
 
-만약 index file이 너무 커서 memory에 안 올라간다면, layer를 나눠서 관리해야 한다.
+### 2. Http Response 구조
 
-- outer index : sparse index
-- inner index : basic index file
-- 만약 outer index마저도 크다면, layer를 또 나눈다.
+HTTP Response Message
 
-### Good tradeoff
+- **Status Line**
+- **Headers**
+- **Body**
 
-- **For clustering index : block 단위의 sparse index**
+    !https://blog.kakaocdn.net/dn/bhue8H/btrFFB1OcZf/6PMLEI7rbXyaUQny5CRizk/img.png
 
-일단 block에 접근하면 memory내에서 scan하여 빠르다. 따라서 dense 보다는 sparse index가 훨씬 더 유리하다.
 
-- **For non-clustering index : dense index의 top을 가리키는 sparse index (multi-level index)**
+### 2-1 Status line
 
-![image](https://blog.kakaocdn.net/dn/oRfWO/btrN6mnQDxA/LnPlPwnJSKoqIYJqDTRi5K/img.png)
+HTTP Response의 상태를 간략하게 나타내주는 부분
 
-# B+Tree Index
+HTTP Response의 status line또한 3가지 부분으로 구성
 
-indexed-sequentail file의 경우 file이 커지면서 성능이 하락하고 주기적으로 전체 파일에 대한 재정비가 필요하다.
+- **HTTP version**
+- **Status Code**
+- **Status Text**
 
-그래서 B+tree 자료구조를 이용하여 index를 관리함으로써 이를 해결한다.
+```java
+HTTP/1.1 200 OK
+[HTTP version] [Status Code] [Status Text]
+```
 
-### B+Tree index의 장점, 단점
+### 2-2 Headers
 
-- 자동으로 삽입, 삭제에 대해서 재정비가 이뤄진다. (장)
-- 전체 file에 대한 재정비가 필요하지 않다. (장)
-- space overhead와 삽입, 삭제에 대한 overhead (단)
+Response의 headers와 동일하다.
 
-→ 단점에도 불구하고 얻을 수 있는 이점이 훨씬 더 많아서 보편적으로 사용됨
+다만 response에서만 사용되는 header 값들이 있다.
 
-![image](https://blog.kakaocdn.net/dn/dqPvzQ/btrOfbFm70i/9m6K71SXvrVe2L1VOcj1dK/img.png)
+예를 들어, User-Agent 대신에 Server 헤더가 사용된다.
 
-## B+Tree 특징
+**Location** : 301, 302 상태코드일 때만 볼 수 있는 Header로 서버의 응답이 다른 곳에 있다고 알려주면서 해당 위치(URI)를 지정
 
-- 엄밀히 얘기하면, **Binary tree, valance tree가 아니다!!**
-- root부터 모든 leaf까지의 **path 길이가 같다**
-- 자식 수
-1. internal node의 자식 수 : **[n/2] ~ n         n=4→ 2~4**
+**Server** : 웹 서버의 종류
 
-    2. leaf node의 자식 수 : **[(n-1)/2] ~ n-1        n=4→ 1~3**
+**Age** : max-age 시간내에서 얼마나 흘렀는지 초 단위로 알려주는 값
 
-    3. root node의 자식 수 : (1) leaf 아닐 때 : **최소 2개,**  (2) leaf일 때 : **0~n-1개**
+**Referrer-policy** : 서버 referrer 정책을 알려주는 값 ex) origin, no-referrer, unsafe-url
 
-- 각 node들은 “logically”하게는 가깝지만 “phsically”하게는 그렇지 않다.
-- **non-leaf level에서는 sparse indices**이다.
-- 상대적으로 level의 개수가 크지 않아서 성능이 좋다 
-1. root 밑 level은 최소 2*[n/2]개의 값, 다음 level은 최소 2* [n/2] * [n/2]
+**WWW-Authenticate** : 사용자 인증이 필요한 자원을 요구할 시 , 서버가 제공하는 인증 방식
 
-    2. K개의 search key가 있다면 tree height : 최대 log[n/2] (K)
+**Proxy-Authenticate** : 요청한 서버가 프록시 서버인 경우 유저 인증을 위한 값
 
+### 2-3 Body
 
-## B+Tree Node Structure
+Response의 body와 일반적으로 동일하다.
 
-![image](https://blog.kakaocdn.net/dn/ddPw8n/btrOgxuGr31/bV8iQD19MTbvAEQJGjvqBk/img.png)
+## HTTP 특징
 
-- K : search key 값
-- P : pointer (자식 노드, record, bucket)
-- **node 내 search key는 정렬**됨 : K1 < K2 < K3 < …. < Kn-1
+1. **클라이언트-서버 구조** 
+    1. 클라이언트는 서버에 요청을 보내면 서버는 그 요청에 대한 응답을 보낸다.
+2. **Stateless, 비연결성**
+    1. 각 요청이 독립적으로처리되며 이전 요청에 대한 정보를 기억하지 않는다.
+    2. 요청을 주고 받을 때만 연결을 유지해서 최소한의 자원을 사용한다.  
+    3. 이러한 비연결성을 보완하기위해 세션, 쿠키를 사용한다.
+    4. Stateful과의 차이
 
-### Leaf Nodes in B+Trees
+        ![img1.daumcdn.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/972e24b4-d1fc-4ff9-9657-da2468227f3b/img1.daumcdn.png)
 
-Leaf node의 특징
+        - 하나의 요청에 대해서 서버는 응답만 줄 뿐, 클라이언트의 정보를 저장하지 않는다.
+        - 이에 반해 stateful한 통신에서는 connection이 종료될 때까지 클라이언트의 정보를 저장한다. 따라서 실시간 통신이 필요한 경우 stateless 보다는 stateful한 프로토콜을 사용해야 한다.
+        - HTTP로 실시간 통신하는 방법 (참고)
+            1. polling : 일정 주기마다 서버에 계속 요청, 이벤트 없어도 요청함
+            2. long polling : 서버에 요청을 보내놓고 서버는 이벤트가 발생하면 응답 후 다시 연결함
+            3. Streaming : 서버에 연결 요청을 보내놓고 계속 응답 데이터를 다운받는다. 서버는 이벤트가 발생하면 응답을 보낸다. 
 
-- P 는 file내 record 중 searck key값이 K인 record를 가리킨다.
-- leaf node L에 대해서 i< j 일 때, Li의 search-key value는 Lj의 search-key보다 작거나 같다.
-- 마지막 Pointer는 다음 leaf node를 가리킨다.
 
-### Non-Leaf Nodes in B+Trees
 
-- **multi-level sparse index**를 생성한다.
-- tree 내 search key값이 정렬되어 있다.
-1. P1이 가리키는 sub tree에 있는 모든 search key 값들이 K1보다 작다. (구조 참고)
-2. 2≤i≤n-1일 때, Pi이 가리키는 sub tree에 있는 모든 search key들은 Ki-1보다 크고, Ki보다 작다.
-3. Pn이 가리키는 sub tree에 있는 모든 search key 값들은 Kn-1보다 크다.
 
-## Queries on B+Trees
+## HTTP Method (멱등성 관련 위주)
 
-- K개의 search key value → tree height : 최대 log[n/2] (K)
-- 따라서, K = 1,000,000 이고 n =100 이면 tree height는 log[50](1,000,000) = 4정도 된다.
-- 즉, 4번만 거치면 원하는 값을 찾을 수 있다.
-- disk에서는 차이가 많이 나지만, ssd에서는 큰 차이가 없다.
+**멱등성 : 동일한 요청에 대해서는 항상 동일한 응답을 반환한다.**
 
-### Range Queries
+HTTP 메소드 별 멱등성 여부
 
-- 주어진 range내 serach key value가 속하는 모든 record를 찾는 query
-- 이 경우 clustering index라면 data file에서의 scan이 쉽겠지만, non-clustering index라면 data file로 접근해서 읽을 때 magenetic disk의 비용이 훨씬 많이 들게 된다.
+- **`GET`** (0): 서버에 존재하는 리소스를 단순히 읽어오기만 하는 메소드이기 때문에 당연히 여러번 수행되어도 결과값은 변하지 않는다.
+- **`PUT`** (0): 서버에 존재하는 리소스를 요청에 담긴 내용대로 통째로 대체해버리므로 올바르게 구현하였다면 여러번 수행되어도 결과 값은 변하지 않을 것 이다.
+- **`DELETE`** (0): 존재하는 데이터를 삭제한 결과와 이미 존재하지 않은 결과를 삭제하려는 시도에 대한 응답 코드는 서로 다르겠지만, (200 OK 또는 404 NOT FOUND) 서버의 상태 자체는 변하지 않으므로 올바르게 구현되었다면 여러번 수행되어도 멱등성이 보장될 것 이다.
+- `POST` (X): DB에 데이터가 추가되므로 멱등성이 보장되지 않는다. 호출할 때마다 서버의 상태가 달리지기 때문이다.
+- `PATCH` (항상 보장하지는 않음) : PATCH는 리소스 일부에 대해서 변화를 줄 수 있다. 따라서 멱등성을 보장하지 않는다. 하지만 구현에 따라서 멱등성을 보장하도록 설계할 수 있다.
 
-![image](https://blog.kakaocdn.net/dn/cmLxpN/btrOgRGDVZx/rPtZpYpIVyPR1MxLsTU1E1/img.png)
+## HTTPS
 
+HTTPS는 SSL (Servure Socket layer) 인증서를 통해서 요청과 응답을 암호화하는 HTTP이다. HTTPS를 이용하면 웹을 통해서 전송되는 모든 데이터들이 추가적인 보안 계층을 거쳐서 암호화 된다. 
 
+SSL은 공개적으로 신뢰할 수 있는 Certificate Authority에서 발급받는데, 발급하는 주체의 정보 (URL, 소유 조직)와 공개 키 등을 저장하는 디지털 여권과도 같다.
 
-# B+ Tree Extensions
+---
 
-## B+Tree File Organization
+### Reference
 
-> p.651
-> 
-> 
-> We solve the degradation problem for **storing the actual records** by using the leaf level
-> of the B+-tree to organize the blocks containing the actual records. We use the B+-tree
-> structure **not only as an index, but also as an organizer for records in a file.**
-> 
-- 여기서는 Leaf node 가 pointer 대신 record를 저장한다.
-- 삽입, 수정, 삭제가 이뤄지더라도 data들이 clustered되도록 도와준다.
-- record는 pointer보다 용량이 크므로, leaf node에 저장될 수 있는 record의 최대 개수는 nonleaf node에서의 pointer 개수보다 작다.
-![image](https://blog.kakaocdn.net/dn/mlvFw/btrOgyf71Au/WvoM3njUphr4k6dBTs8qIk/img.png)
-
-- space utilization이 필요하다. (pointer 대신 record를 저장하므로)
-- 이를 위해서 split과 merge 과정에서 sibling node들을 골고루 퍼트린다. (7,7,10 vs 8,8,8)
-
-## B Tree Index Files
-
-B+ Tree에서는 internode에 있는 search key가 반드시 leaf node에 나타나게 된다.
-따라서 조회를 위해서는 무조건 leaf까지 가야한다.
-
-반면, B Tree에서는 search-key가 오직 한 번만 나타난다.
-
-- search key가 nonleaf node에서도 나타난다.
-- leaf까지 갈 필요 없이 바로 찾을 수도 있다.
-- 구조
-
-![image](https://blog.kakaocdn.net/dn/1iWLh/btrOdh0crF7/yCucsoxDtqZV1apCY1TIrK/img.png)
-
-- Bi : bucket or file record pointer
-
-> **fan-ou**t: number of pointers to child nodes in a node.
-**fan-out이 클수록 tree의 height가 작다**
-> 
-### B Tree 장단점
-
-장점
-
-1. B+ Tree에 비해서 적은 node로 구성할 수도 있다.
-2. leaf 까지 가기 전에 찾을 수도 있다.
-
-단점
-
-1. 대부분은 leaf까지 가야됨
-2. depth가 깊다(height가 높다) : fan-out이 작다.
-3. 삽입과 삭제가 더 복잡하다.
-4. 구현이 어렵다
-
-따라서 대부분 B+ Tree를 사용한다.
-
-![image](https://blog.kakaocdn.net/dn/dckTMr/btrOcfhi1au/cAGx0KAmunQUoKztzgoIc0/img.png)
-
-# Hash Indices
-
-## Static Hashing
-
-- bucket : entries들을 저장하는 storage unit
-- hash function을 이용한 search-key값을 통해 entry의 bucket을 얻는다.
-- hash function, h가 search-key set K를 bucket address set B로 변환시킨다.
-- In a hash index → bucket이 pointer를 저장
-- In a hash file-organization → bucket이 record를 저장
-
-## Handling of Bucket Overflows
-
-hash 함수를 아무리 잘 만들었더라도 Bucket overflow가 발생할 수 있다.
-
-### bucket overflow 원인
-
-- 충분치 않은 bucket양
-- hash 함수가 non-uniform하기 분배한 경우
-- multiple record가 같은 search-key값을 가진 경우
-
-### overflow chaining (closed addressing, closed hashing)
-
-→ linked list로 해결
-
-![image](https://blog.kakaocdn.net/dn/GjcFn/btrOfazNQTH/hUoSqW1VXer6oPpldUkytk/img.png)
-
-### Example of Hash Index
-
-![image](https://blog.kakaocdn.net/dn/cvsPBu/btrOc74swAV/8xPtR1xCvrUpggQWAZPjA1/img.png)
-
-### Deficiencies of Static Hashing
-
-DB는 시간이 지남에 따라 grow하거나 shrink하는데, static hash index이기 때문에 db가 커지면 성능이 안 좋아지고, 작아지면 공간이 낭비된다.
-
-이에 대한 해결책은,
-
-- **periodic re-organization** with a **new hash function → cost가 비싸다**
-- **Dynamic Hashing** (better soultion)
-
-## Ordered Indexing vs Hashing
-
-- 주기적으로 B+ tree를 다시 만든다.
-- access time의 경우 B+tree는 무조건 leaf까지 가야하고, hash는 경우에 따라 다르다.
-- Hashing ⇒ 특정 값을 찾는 쿼리에 적합하다.
-- B+ Tree ⇒ range 쿼리에 적합하다.
+[HTTP 개요 - HTTP | MDN](https://developer.mozilla.org/ko/docs/Web/HTTP/Overview)
