[Network] Http - 박찬호

--- a/Network/HTTP/박찬호.md
+++ b/Network/HTTP/박찬호.md
@@ -50,17 +50,17 @@ HTTP Request와 Response의 구조는 서로 닮았다.
 
 **Cache-Control** : 캐시 제어
 
-**+ no-store** : 캐시를 저장하지 않겠다
+    **+ no-store** : 캐시를 저장하지 않겠다
 
-**+ no-cache** : 모든 캐시를 쓰기 전에 서버에 해당 캐시를 사용해도 되는지 확인하겠다
+    **+ no-cache** : 모든 캐시를 쓰기 전에 서버에 해당 캐시를 사용해도 되는지 확인하겠다
 
-**+ must-revalidate** : 만료된 캐시만 서버에 확인하겠다.
+    **+ must-revalidate** : 만료된 캐시만 서버에 확인하겠다.
 
-**+ public** : 공유 캐시에 저장해도 된다.
+    **+ public** : 공유 캐시에 저장해도 된다.
 
-**+ private** : '브라우저' 같은 특정 사용자 환경에만 저장하겠다.
+    **+ private** : '브라우저' 같은 특정 사용자 환경에만 저장하겠다.
 
-**+ max-age** : 캐시의 유효시간을 명시하겠다.
+    **+ max-age** : 캐시의 유효시간을 명시하겠다.
 
 **Transfer-Encoding** : Body 내용 자체 압축 방식을 지정
 
@@ -80,7 +80,11 @@ HTTP Request와 Response의 구조는 서로 닮았다.
 - **Headers**
 - **Body**
 
-    ![img1.daumcdn.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3a7ae2ae-9b5c-4888-96e5-dfcb640fa80c/img1.daumcdn.png)
+
+![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/83508073/a0253d62-2dbd-40c5-9b28-d35286f04fe6)
+
+    
+
 
 
 ### 1-1 start line
@@ -146,7 +150,8 @@ HTTP Response Message
 - **Headers**
 - **Body**
 
-    !https://blog.kakaocdn.net/dn/bhue8H/btrFFB1OcZf/6PMLEI7rbXyaUQny5CRizk/img.png
+    ![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/83508073/7609af5f-6cc3-4298-bcdd-87b5c2edb3cf)
+
 
 
 ### 2-1 Status line
@@ -198,7 +203,7 @@ Response의 body와 일반적으로 동일하다.
     3. 이러한 비연결성을 보완하기위해 세션, 쿠키를 사용한다.
     4. Stateful과의 차이
 
-        ![img1.daumcdn.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/972e24b4-d1fc-4ff9-9657-da2468227f3b/img1.daumcdn.png)
+        ![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/83508073/31c6f189-50bf-4ebb-9d55-64883a65cde5)
 
         - 하나의 요청에 대해서 서버는 응답만 줄 뿐, 클라이언트의 정보를 저장하지 않는다.
         - 이에 반해 stateful한 통신에서는 connection이 종료될 때까지 클라이언트의 정보를 저장한다. 따라서 실시간 통신이 필요한 경우 stateless 보다는 stateful한 프로토콜을 사용해야 한다.
