[DB] RDBMS vs NoSQL - 조윤호 (수정)

--- a/Database/RDB vs NoSQL/조윤호.md
+++ b/Database/RDB vs NoSQL/조윤호.md
@@ -20,10 +20,10 @@
 - BASE 트랜잭션
   - ACID 트랜잭션을 보장하지 않음
 
-![img.png](img.png)
-![img_4.png](img_4.png)
-![img_1.png](img_1.png)
-![img_3.png](img_3.png)
+![img](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/6b3fbf06-9621-4303-bd9b-fad2036d9ad9)
+![img_4](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/09d5f187-20fe-41b3-acc9-20795aaa83c4)
+![img_1](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/f3cc6eab-6596-4519-a99e-94c074dcf9d9)
+![img_3](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/fdd51683-c6d3-4765-9359-f787427dfd21)
 
 - mongoDB
   - document store
