[Database] RDB vs NoSQL - 어정윤(수정)

--- a/Database/RDB vs NoSQL/어정윤.md
+++ b/Database/RDB vs NoSQL/어정윤.md
@@ -36,7 +36,7 @@ RDB에는 테이블을 조인하여 정보 간 관계 또는 링크를 설정할
 
 - 기작성된 스키마를 수정하기 어렵다.
 - 시스템이 커지면 JOIN문이 많은 복잡한 쿼리가 만들어질 수 있다.
-- 성능 향상을 위해서는 Scale-up만을 지원해 비용이 기하급수적으로 늘어날 수 있다.
+- 성능 향상을 위해서는 스케일 업만을 지원해 비용이 기하급수적으로 늘어날 수 있다.
 - 다른 DB에 비해 많은 자원이 활용되어 시스템 부하가 높다.
 
 ## 2. NoSQL
@@ -54,14 +54,13 @@ NoSQL 데이터베이스는 유연한 데이터 모델, 수평적 확장, 매우
 
 - 확장성
 
-  대부분의 SQL 데이터베이스는 현재 서버에서 요구되는 용량을 초과하면 **수직적 확장 (더 크고 비싼 서버로 마이그레이션)**이 필요하다. 반면에 대부분의 NoSQL 데이터베이스를 사용하면 수평적 확장이
+  대부분의 SQL 데이터베이스는 현재 서버에서 요구되는 용량을 초과하면 **수직적 확장 (더 크고 비싼 서버로 마이그레이션)** 이 필요하다. 반면에 대부분의 NoSQL 데이터베이스를 사용하면 수평적 확장이
   가능하므로 필요할 때마다 더 저렴한 비용으로 상용 서버를 추가할 수 있다.
 
 - 고성능
 
   NoSQL 데이터베이스의 쿼리는 SQL 데이터베이스보다 빠를 수 있다. SQL 데이터베이스의 데이터는 일반적으로 정규화되므로 단일 객체 또는 엔터티에 대한 쿼리를 수행하기 위해 여러 테이블을 Join해야한다.
-  만약 테이블 크기가 커진다면 Join 비용은 더 비싸질 수 있다. 그러나 **NoSQL 데이터베이스의 데이터는 일반적으로 쿼리에 최적화된 방식으로 저장된다.** MongoDB를 사용할 때 경험에 의한 법칙은 **
-  함께 엑세스되는 데이터는 함께 저장되어야한다는 것이다.** 따라서 NoSQL의 질의에는 일반적으로 Join이 필요하지 않으므로 쿼리 속도가 매우 빠르다.
+  만약 테이블 크기가 커진다면 Join 비용은 더 비싸질 수 있다. 그러나 **NoSQL 데이터베이스의 데이터는 일반적으로 쿼리에 최적화된 방식으로 저장된다.** MongoDB를 사용할 때 경험에 의한 법칙은 **함께 엑세스되는 데이터는 함께 저장되어야한다는 것이다.** 따라서 NoSQL의 질의에는 일반적으로 Join이 필요하지 않으므로 쿼리 속도가 매우 빠르다.
 
 - 가용성
 
