--- a/Operating System/Process vs Thread/조윤호.md
+++ b/Operating System/Process vs Thread/조윤호.md
@@ -32,7 +32,7 @@
 
 ## Context Switching
 - 각 스레드는 cpu 자원을 시간에 따라 분할하여 사용
-
+- 현재 진행하고 있는 Task(Process, Thread)의 상태를 저장하고 다음 진행할 Task의 상태 값을 읽어 적용하는 과정
 
 # Multi Process vs Multi Thread
 
