[DB] RDBMS vs NoSQL - 조윤호

--- a/Database/RDB vs NoSQL/조윤호.md
+++ b/Database/RDB vs NoSQL/조윤호.md
@@ -40,11 +40,13 @@ ACID와 대조적으로 가용성과 성능을 중시하는 특성을 가진 분
 - 시스템 부하, 네트워크 속도 등의 외부 요인으로 인해 일관성이 일시적으로 깨질 수 있다.
 
 
+### RDBMS vs NoSQL 성능 비교
 ![img](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/6b3fbf06-9621-4303-bd9b-fad2036d9ad9)
 ![img_4](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/09d5f187-20fe-41b3-acc9-20795aaa83c4)
 ![img_1](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/f3cc6eab-6596-4519-a99e-94c074dcf9d9)
 ![img_3](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/fdd51683-c6d3-4765-9359-f787427dfd21)
 
+# NoSQL 분류
 - mongoDB
   - document store
 - dynamoDB
