[DB] transaction - 조윤호 (수정

--- a/Database/Transaction/조윤호.md
+++ b/Database/Transaction/조윤호.md
@@ -97,9 +97,46 @@ public void transfer(){
 - commit 된 transaction은 db에 영구적으로 저장된다.
 - DB에 문제가 발생해도 transaction은 db에 반영되어있다.
 
-### 트랜잭션 격리 수준
+## 트랜잭션 격리 수준
+- READ UNCOMMITTED
+  - 아직 커밋되지 않은 데이터를 다른 트랜잭션이 읽을 수 있음
+  - 읽는 도중에 rollback 발생시 -> 존재하지 않는 데이터를 읽어올 수 있다.
+- READ COMMITTED : **Default**
+  - 커밋된 데이터만 읽을 수 있음
+  - 읽는 도중에 수정이 발생할 수 있다.
+- REPEATABLE READ
+  - 하나의 트랜잭션이 읽은 데이터는 다른 트랜잭션에서 수정 불가능
+  - 읽는 도중에 create가 발생하여 새로운 row가 생성될 수 있다.
+- SERIALIZABLE
+  - 한 테이블에 여러 트랜잭션이 동시에 접근할 수 없음
+  - 순차적으로 트랜잭션을 수행하는것과 같다.
 
-### JPA에서의 transaction 처리
+## Spring에서의 @Transactional 처리
+### propagation
+- `@Transactional(propagation=Propagation.REQUIRED)` : **Default**
+  - 기존 트랜잭션이 없는 경우 : 새로운 트랜잭션으로 실행
+  - 기존 트랜잭션이 있는 경우 : 기존 트랜잭션에 참여
+- `@Transactional(propagation=Propagation.SUPPORTS)` 
+  - 기존 트랜잭션이 없는 경우 : 트랜잭션 없이 실행 
+  - 기존 트랜잭션이 있는 경우 : 기존 트랜잭션에 참여
+- `@Transactional(propagation=Propagation.MANDATORY)` 
+  - 기존 트랜잭션이 없는 경우 : 예외 발생
+  - 기존 트랜잭션이 있는 경우 : 기존 트랜잭션에 참여
+- `@Transactional(propagation=Propagation.REQUIRES_NEW)` 
+  - 기존 트랜잭션이 없는 경우 : 새로운 트랜잭션으로 실행
+  - 기존 트랜잭션이 있는 경우 : 기존 메소드 중단. 새로운 트랜잭션으로 실행
+- `@Transactional(propagation=Propagation.NOT_SUPPORTED)` 
+  - 기존 트랜잭션이 없는 경우 : 
+  - 기존 트랜잭션이 있는 경우 : 
+- `@Transactional(propagation=Propagation.NEVER)` 
+  - 기존 트랜잭션이 없는 경우 : 트랜잭션 없이 실행
+  - 기존 트랜잭션이 있는 경우 : 예외 발생
+- `@Transactional(propagation=Propagation.NESTED)` 
+  - 기존 트랜잭션이 없는 경우 : 새로운 트랜잭션으로 실행
+  - 기존 트랜잭션이 있는 경우 : 기존 트랜잭션 내부에 새로운 트랜잭션 생성
 
-
-
+### Isolation
+- READ UNCOMMITTED
+- READ COMMITTED
+- REPEATABLE READ
+- SERIALIZABLE
