[Database] Transaction - 어정윤(수정)

--- a/Database/Transaction/어정윤.md
+++ b/Database/Transaction/어정윤.md
@@ -63,11 +63,13 @@
 
       커밋이 완료된 데이터에 대해서만 조회 가능 ⇒ Non-Repeatable Read 발생 가능(다른 트랜잭션에서 같은 행을 수정할 수 있기 때문에)
 
-      가장 많이 사용되는 격리 수준으로, MySQL 8.0, PostgreSQL, SQL Server, Oracle에서 기본값으로 설정
+      가장 많이 사용되는 격리 수준으로, PostgreSQL, SQL Server, Oracle에서 기본값으로 설정
 
     - REPEATEABLE_READ
 
       하나의 트랜잭션이 수정한 행을 다른 트랜잭션이 수정 불가능 ⇒ Phantom Read 발생 가능(새로운 행의 추가를 막을 수 없기 때문에)
+
+      **MySQL 8.0는 InnoDB에서 Phantom Read문제를 해결해줘서 REPEATABLE_READ를 기본값으로 설정**
 
     - SERIALIZABLE
 
