[OS] Virtual Memory - 조윤호 (수정)

--- a/Operating System/Virtual Memory/조윤호.md
+++ b/Operating System/Virtual Memory/조윤호.md
@@ -1,6 +1,8 @@
 # [OS] Virtual Memory - 조윤호
 ## virtual memory
 - 물리 메모리 공간을 논리 메모리 공간과 매핑하여 각 프로세스에 논리 메모리 공간을 부여하는 방법
+  - 컴퓨터마다 메모리, 스토리지의 용량은 모두 다르다. 또 프로세스들에게 할당해야 하는 메모리는 실제 메모리 용량보다 큰 경우가 많다.
+  - virtual 메모리를 통해 메모리와 스토리지를 보다 효율적으로 운영 가능
 - CPU 내의 주소 매핑 테이블(MMU)에서 관리된다.
 
 ### 장점
@@ -8,8 +10,39 @@
 - 프로세스가 멈춘 경우, 해당 프로세스의 메모리를 재사용할 수 있어 메모리 낭비, 누수 방지
 - 가상 주소 공간을 사용하여 각 프로세스가 안정적으로 프로그래밍할 수 있다.
 - 현재 필요한 메모리만 페이지 단위로 물리 메모리로 옮기므로, 효율적으로 물리메모리를 운용할 수 있다.
-  - 프로세스 당 메모리 사용량 감소
+  - 프로세스 당 물리메모리 사용량 감소
+ 
+## 페이징
+- 모든 프로세스의 논리 주소 공간을 일정 크기로 자른다(ex-10MB) -> 페이지
+  - 페이지 사이즈 찾는법 : linux -> `getconf PAGESIZE` 
+- 물리 메모리의 물리 주소 공간을 동일한 크기로 자른다 -> 프레임
+- 페이지를 프레임에 할당
+<img width="100" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/241933f6-b87e-4c30-b423-b943cbc96aae">
+
 
 ### 요구 페이징 기법
-- 논리 메모리 중 현재 사용중인 페이지를 물리 메모리에 가져오는 기법
+- 논리 메모리 중 현재 사용중인 페이지를 물리 메모리에 **복사해** 가져오는 기법
+- 프로세스 단위가 아닌 페이지 단위로 DRAM <-> swap 영역을 이동할 수 있다.
 - 효율적으로 물리 메모리를 사용하기 위한 방법
+
+### page table
+- page - frame 번호 매칭해주는 테이블
+
+<img width="400" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/171794f4-127f-4814-a45d-433191f66059">
+
+- 메모리에서 관리된다 -> 캐싱 필요 -> TLB
+- TLB : page table의 캐시
+- valid/invalid 플래그
+  - 해당 페이지가 물리 메모리와 swap 영역 중 어디에 있는지를 알려주는 플래그
+
+- 보호 비트
+  - 해당 페이지의 읽기/쓰기/실행이 가능한지 여부 체크
+  - 보안성 강화됨
+<img width="500" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/a2ae4877-93eb-4be7-b9ec-2c41edd2c655">
+
+
+
+
+### 질문) 
+- 왜 모든 프로세스의 메모리 용량은 4GB인지? 더 큰 경우는 없나?
+- os에 따른 차이가 있는지?
