--- a/Operating System/Race Condition, Critical Section/조윤호.md
+++ b/Operating System/Race Condition, Critical Section/조윤호.md
@@ -41,6 +41,7 @@
   - 전역변수 lock : 임계영역이 잠겨있는지 여부
   - acquire() : lock을 확인하고, 열려있으면 진입한 뒤 `lock=true`로 전환한다.
   - release() : 작업을 모두 마친 뒤 `lock=false`로 전환한다.
+ 
 - 단점
   - busy waiting : while문을 사용하므로 대기 중 락을 너무 자주 확인함 -> 자원 낭비
 
@@ -72,6 +73,42 @@
 <img width="400" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/2980d288-5b63-4b45-bd3d-ddf08a2e62fa">
 
 # Dead Lock (교착상태)
+- 일어나지 않을 사건으 기다리며 진행이 멈춰 버리는 현상
+- 프로세스에 여러 자원이 필요할 때, 서로 다른 자원을 점유한 채로 대기하고 있으면 모두 진행이 되지 않는다.
+<img width="300" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/9082aeab-0e4d-4d7a-a6f6-7d732114f691">
+<img width="300" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/679591b4-7216-4202-8e1f-1e76adee06a3">
+
+### 자원 할당 그래프
+- 🔵 - 프로세스
+- 🟧 - 자원
+- · - 사용가능한 자원의 단위
+<img width="300" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/680039e8-aa9c-4edf-9825-922186bffb22">
+
+- 자원 할당 그래프에 순환이 발생할 경우 -> 교착상태가 발생한다.
+<img width="300" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/09725c53-d801-420c-9eb8-6c5bc0c8f0f0">
+
+### 발생 원인 (아래 네 가지 조건 모두 만족되면 교착상태 발생 가능)
+- Mutual Exclusion(상호 배제)
+  - 한 프로세스가 사용하는 자원을 다른 프로세스가 사용할 수 없음
+- Hold & Wait(점유와 대기)
+  - 자원을 할당 받은 상태에서 다른 자원을 할당받기를 기다리는 상태
+- Non-Preemtion(비선점)
+  - 어떤 프로세스도 다른 프로세스의 자원을 강제로 빼앗지 못하는 상태
+- Circular Wait(원형 대기)
+  - 프로세스들이 원의 형태로 자원을 대기하는 상태
 
 # Dead Lock 해결
+방법
+1. 교착상태가 발생하지 않도록 한다. or
+2. 교착상태의 발생 조건 4가지 중 하나를 해결한다. -> Circular Wait을 해결하면 된다.
 
+### 교착상태의 예방
+### 교착상태의 회피
+- 안전 순서열 : 교착 상태 없이 안전하게 프로세스들에 자원을 할당할 수 있는 순서
+- 안전 상태 : 교착 상태 없이 모든 프로세스가 자원을 할당받고 종료될 수 있는 상태
+  -  == 안전 순서열 있는 상태
+- 불안전 상태 : 교착상태가 발생할 수 있는 상태
+  -  == 안전 순서열 없는 상태
+  
+### 교착상태 검출 후 회복
+### 교착상태 무시
