[Operating System] Race Condition, Critical Section - 조윤호 (수정)

--- a/Operating System/Race Condition, Critical Section/조윤호.md
+++ b/Operating System/Race Condition, Critical Section/조윤호.md
@@ -72,6 +72,9 @@
 - condition_variable.signal() : 대기상태의 condition_variable를 실행상태로 변경
 <img width="400" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/2980d288-5b63-4b45-bd3d-ddf08a2e62fa">
 
+# (질문) 뮤텍스나 세마포에서 lock,S 또한 전역변수인데, 해당 접근에 대해서는 어떻게 비동기로 처리되는지?
+
+
 # Dead Lock (교착상태)
 - 일어나지 않을 사건으 기다리며 진행이 멈춰 버리는 현상
 - 프로세스에 여러 자원이 필요할 때, 서로 다른 자원을 점유한 채로 대기하고 있으면 모두 진행이 되지 않는다.
