--- a/Operating System/Race Condition, Critical Section/강민성.md
+++ b/Operating System/Race Condition, Critical Section/강민성.md
@@ -59,5 +59,5 @@
 - Java의 Syncronized 키워도 모니터를 사용하여 구현되어 있다.
 - 동작 과정
     - 공유 자원에 접근하고자 하는 프로세스/쓰레드는 모니터안으로 들어가야한다.
-    - 모니터는 모니터큐에 작업을 순차적으로 쌓아두고, 한번에 한 프로세스/쓰레드만 임계 영역에 접근할 수 있도록 한다.
+    - 모니터는 모니터큐에 작업을 순차적으로 쌓아두고, 한번에 한 프로세스&쓰레드만 임계 영역에 접근할 수 있도록 한다.
     - 즉, 한번에 하나의 프로세스만 모니터에서 활동할 수 있도록 보장한다. 개념적으로는 이진 세마포어의 기능을 제공하는 것이다.
