--- a/Operating System/Race Condition, Critical Section/박성우.md
+++ b/Operating System/Race Condition, Critical Section/박성우.md
@@ -25,10 +25,7 @@
 
 이미 lock이 걸려있는 공유 자원에 접근할 때는 대기한다.
 
-예를 들어서 책이라는 공유 자원에 여러 프로세스가 접근하고 싶어할 때, `lock`을 통해 공유 자원에 접근할 수 있는지에 대한 여부를 판단한다.
-
-![image](https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/79205414/95eb4f78-9202-4b21-a414-d92595ad2ee5)
-
+공유 자원에 여러 프로세스가 접근하고 싶어할 때, `lock`을 통해 공유 자원에 접근할 수 있는지에 대한 여부를 판단한다.
 
 ### 세마포어
 
@@ -45,3 +42,54 @@ wait 함수와 signal 함수로 공유 자원에 접근한다.
 프로세스, 스레드는 인터페이스를 통해서 공유자원에 접근할 수 있다.
 
 모니터를 사용하면 개발자가 직접 잠금과 조건 변수를 구현하지 않고도 스레드의 동기화를 보다 편리하게 처리할 수 있다.
+
+## Dead Lock
+
+두 개 이상의 프로세스들이 서로가 가진 자원을 기다리며 중단된 상태!
+
+### 데드락의 원인
+
+아래의 4가지를 동시에 만족한다면 데드락이 발생한다!
+
+1. **상호 배제**
+    
+    한 프로세스가 자원을 독점하고 있으며 다른 프로세스가 접근이 불가능합니다.
+    
+
+1. **점유 대기**
+    
+    특정 프로세스가 점유한 자원을 다른 프로세스가 요청하는 상태입니다.
+    
+2. **비선점**
+    
+    다른 프로세스의 자원을 강제적으로 가져올 수 없습니다.
+    
+
+1. **환형 대기**
+    
+    프로세스들이 서로가 서로의 자원을 요구하는 상황이 발생합니다.
+    
+
+### 해결 방법
+
+### 1. 데드락 예방
+
+위에서 말한 교착 상태의 원인을 부정한다.
+
+4가지 중 적어도 하나가 성립하지 않도록 한다면, 데드락을 예방할 수 있다.
+
+### 2. 데드락 회피
+
+데드락 예방의 경우에는 효율성과 시스템 처리량을 떨어뜨린다.
+
+데드락 회피는 데드락 위험 구역을 파악하여 자원을 할당하는 방법이다.
+
+프로세스가 일생동안 요구하고 사용할 자원에 대한 부가적인 정보를 미리 제공할 것을 요구한다.
+
+이러한 추가 지식을 가지고, 운영체제는 각 요청을 위해 그 프로세스가 기다려야 할지 말지를 결정할 수 있다.
+
+### 3. 데드락 회복
+
+1. 프로세스 종료 방법
+    - 교착 상태의 프로세스 모두 중지
+    - 교착 상태가 제거될 때까지 한 프로세스씩 중지
