--- a/Java/Synchronization/조윤호.md
+++ b/Java/Synchronization/조윤호.md
@@ -16,18 +16,31 @@ private volatile value
 
 ## Blocking (블로킹)
 ### 모니터
-- 배타 동기 큐에 프로세스 대기, 순차적으로 임계영역 접근
+- Mutual exclusion queue에 프로세스 대기, 순차적으로 임계영역 접근
 - 상호 배타, 실행순서 정렬 제공
 
-```java 
+```java
+// 메서드 전체를 임계 영역으로 설정하기
 public synchronized void mySyncMethod() ... {
-...
+  ...
+}
+
+// 특정한 영역을 임계 영역으로 설정
+synchronized(객체의 참조변수) {
+  ...
 }
 ```
-
+- 성능 개선
+  - 임계영역의 사용을 최소화할것
+  - 공유자원,전역변수 되도록 사용하지 않을 것
 - 단점
-  - 큐에서의 대기로 인한 성능저하 발생
+  - 큐에서의 대기로 인한 성능저하 발생 
   - 데드락 발생 가능
+ 
+### wait() and notify()
+- wait() : 객체의 lock을 풀고 쓰레드를 해당 객체의 waiting pool에 넣는다.
+- notify() : waiting pool에서 대기중인 쓰레드 중 하나를 깨운다.
+- notifyAll() :waiting pool에서 대기중인 모든 쓰레드를 깨운다.
 
 ## Non-Blocking (논블로킹)
 - 다른 스레드의 작업여부와 상관없이 자신의 작업을 수행
@@ -37,7 +50,7 @@ private volatile value
 3. 만약 다르다면 수정하지 x, False 반환
 
 ### atomic 타입 변수 = CAS + Volatile
-```java 
+```java
 private AtomicInteger value = new AtomicInteger(0);
 ```
 
