[JAVA] 리플렉션 - 조윤호 (수정)

--- a/Java/Reflection/조윤호.md
+++ b/Java/Reflection/조윤호.md
@@ -84,15 +84,18 @@ Field field = child.getField("value");
 - 라이브러리
 - 어노테이션
 
-
-
-### DI
-
-
 ### 단점
 1. 일반 메서드 호출보다 성능이 떨어짐 <br>
    컴파일 시점이 아니라 런타임 시점에서 클래스를 분석하기 때문 <br>
    JVM 최적화 불가
-3. 타입 체크 기능을 사용할 수 없다.
-4. 코드가 지저분하고 장황해짐
-5. 내부 노출, 추상화가 파괴됨, 불변성 보장 x
+3. 컴파일 시점에서 타입 체크 기능을 사용할 수 없다.
+5. 코드가 지저분하고 장황해짐
+4. 런타임 에러가 매우 많이 발생한다.
+6. 내부 노출, 추상화가 파괴됨, 불변성 보장 x
+
+### 필요한 경우
+- 런타임에 존재하지 않을 수도 있는 클래스,메서드,필드와의 의존성 관리
+- 버전이 여러 개 있는 외부 패키지<br>
+  가장 오래된 버전으로 컴파일 -> 이후 버전의 클래스는 리플렉션으로 접근
+- 등등, 꼭 필요할때만 쓰자
+- (이펙티브 자바 ch.65 참고)
