[Network] DNS - 강민성 (수정)

--- a/Network/DNS/강민성.md
+++ b/Network/DNS/강민성.md
@@ -6,6 +6,7 @@
 
 <img width="580" alt="image" src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/71378475/90f2a8b2-6574-4c38-a306-68b8c82d5550">
 
+<br/>
 
 ### DNS 작동 원리
 
@@ -21,18 +22,19 @@
 4. 이제 Local DNS 서버는 com 도메인을 관리하는 TLD DNS 서버(최상위 도메인 서버)에 다시 www.naver.com에 대한 IP 주소를 요청한다.
 5. com 도메인을 관리하는 DNS 서버에도 해당 정보가 없으면, Local DNS 서버에게 "www.naver.com 의 IP 주소 찾을 수 없음. 다른 DNS 서버에게 물어봐" 라고 응답을 한다.
 6. 이제 Local DNS 서버는 **naver.com DNS 서버(Authoritative DNS 서버)**에게 다시 "www.naver.com 의 IP 주소" 를 요청한다.
-7. naver.com DNS 서버 에는 "www.naver.com 의 IP 주소" 가 있다.
-
-그래서 Local DNS 서버에게 "www.naver.com에 대한 IP 주소는 222.122.195.6" 라는 응답을 한다.
-
-1. 이를 수신한 Local DNS는 www.naver.com 의 IP 주소를 캐싱을 하고 이후 다른 요청이 있을시 응답할 수 있도록 IP 주소 정보를 단말(PC)에 전달해 준다.
+7. naver.com DNS 서버 에는 "www.naver.com 의 IP 주소" 가 있다. 그래서 Local DNS 서버에게 "www.naver.com에 대한 IP 주소는 222.122.195.6" 라는 응답을 한다.
+8. 이를 수신한 Local DNS는 www.naver.com 의 IP 주소를 캐싱을 하고 이후 다른 요청이 있을시 응답할 수 있도록 IP 주소 정보를 단말(PC)에 전달해 준다.
 
 ⇒ Local DNS 서버가 여러 DNS 서버에 차례대로 (Root DNS 서버 → TLD DNS 서버(.com) → Authoritative DNS 서버(naver.com) 요청하여 그 답을 찾는 과정을 **재귀적 쿼리 Recursive Query**
+
+<br/>
 
 ### DNS Cache
 
 - "www.naver.com" 의 IP주소를 성공적으로 받아 왔고, 몇 분 후 다시 "www.naver.com"에 방문하려고 했을 때, 또다시 위와 같은 복잡한 과정을 반복해서 IP 주소를 받아올까?
 - 너무 비효율적이기 때문에 PC에는 DNS Cache라는 Cache를 활용해 Cache안에 자주쓴는 Domain Name 주소를 저장해 놓는다.
+
+<br/>
 
 ### 용어 정리
 
