--- a/Database/Distributed Lock/조윤호.md
+++ b/Database/Distributed Lock/조윤호.md
@@ -14,17 +14,65 @@
 - Redisson
 
 ## Redission
-- Lock Interface 지원
-- Pub/Sup 패턴
+- Lock을 위한 Interface 지원 : `RLock`
+- Pub/Sub 패턴
 
 
 ### 요구사항
-- 분산락을 도입하며 보다 손쉽고 효율적으로 사용할 수 없을까? 라는 고민을 시작으로 몇 가지 규칙을 만들었습니다.
-- 분산락 처리 로직은 비즈니스 로직이 오염되지 않게 분리해서 사용한다.
-- waitTime, leaseTime을 커스텀 하게 지정 가능하다.
-- 락의 name에 대해 사용자로부터 커스텀 하게 받아 처리한다.
-- 추가 요구사항에 대해서 공통으로 관리한다.
-
 - 오직 한 순간에 하나의 작업자만이 락(lock) 을 걸 수 있다.
-- 락 이후, 어떠한 문제로 인해 락을 풀지 못하고, 종료된 경우라도 다른 작업자가 락을 획득할 수 있어야합니다.
-- Redis 노드가 작동하는한, 모든 작업자는 락을 걸고 해체할 수 있어야합니다.
+- 락 이후, 어떠한 문제로 인해 락을 풀지 못하고, 종료된 경우라도 다른 작업자가 락을 획득할 수 있어야 한다.
+- Redis 노드가 작동하는한, 모든 작업자는 락을 걸고 해체할 수 있어야 한다.
+
+### Redisson RLock Interface
+
+``` java
+RLock rlock = redissonClient.getLock("{key}");
+rlock.isLocked();
+rlock.lock(leaseTime, timeUnit);
+rlock.tryLock(waitTime, leaseTime, timeUnit) throws InterruptedException;
+rlock.unlock()
+```
+- key : 락의 이름
+- waitTime : lock 획득까지 기다리는 최대 시간
+- leaseTime : lock 획득한 후 `unlock()`하지 않았을 때 최대 대기시간
+- TimeUnit : 락의 시간 단위
+- `InterruptedException` : 스레드 간 인터럽트 발생 시 예외처리
+
+- `lock(...)` : 락 획득시점까지 무한정 대기
+- `trylock(...)` : waitTime 내 락 획득하면 true, 실패하면 false, 인터럽트 발생 시 `InterruptedException`
+
+### 예시 1
+``` java
+public void acquireLock1() {
+    ...
+    RLock lock = redissonClient.getLock("{key}");
+    try {
+        //락 획득 요청
+        boolean isLocked = lock.tryLock(2, 3, TimeUnit.SECONDS);
+        if (!isLocked) {
+            //락 획득 실패 시 예외 처리
+            throw new Exception( ... );
+        }
+    } catch (InterruptedException e) {
+        //쓰레드가 인터럽트 될 경우 예외 처리
+    } finally {
+        //락 해제
+        lock.unlock();
+    }
+}
+```
+
+### 예시 2
+```java
+public boolean acquireLock2() {
+    ...
+    RLock lock = redissonClient.getLock("{key}");
+    //락 여부 확인
+    boolean isLocked = lock.isLocked();
+    if (!isLocked) {
+      //락이 걸려있지 않은 경우 락 획득
+      lock.lock(3, TimeUnit.SECONDS);
+    }
+    return isLocked;
+}
+```
