--- a/Spring/JDK Dynamic Proxy & CGLIB/조윤호.md
+++ b/Spring/JDK Dynamic Proxy & CGLIB/조윤호.md
@@ -1,2 +1,107 @@
 # [Spring] JDK Dynamic Proxy & CGLIB - 조윤호
 
+## 프록시 패턴
+- 특정 객체에 대한 접근을 제어하거나 부가기능을 구현하기 위해 사용하는 패턴
+
+<img width=400px src="https://github.com/SoftwareMaestro-Backend-Study/cs-study/assets/61899645/1120c883-a8eb-47e3-b2fc-efc76dbd25cb">
+
+### 장점
+- 지연 로딩 : 큰 객체의 로딩을 사용시점까지 연기할 수 있다.
+- 접근 제어 : 실제 객체의 public, protected 메소드를 숨기고 인터페이스를 통해 노출시킬 수 있다.
+- OCP : 기존 코드 변경 없이 새로운 기능을 추가할 수 있다.
+- SRP : 기존 코드의 주요 역할만 유지할 수 있다.
+  - ex - 트랜잭션, 성능 측정 등의 부가적 기능은 주요 로직이 아니므로 프록시 패턴을 통해 분리할 수 있다.
+
+### 단점
+- 객체를 생성할 때 한 단계를 거치게 되므로, 빈번한 객체 생성이 필요한 경우 성능이 저하될 수 있다.
+- 프록시 내부에서 객체 생성을 위해 스레드가 생성, 동기화가 구현되어야 하는 경우 성능이 저하될 수 있다.
+- 가독성, 코드 복잡도
+
+# JDK Dynamic Proxy
+- runtime 시점에 interface를 구현하는 프록시 객체를 생성하는 것
+
+```java
+public static Object newProxyInstance(
+    ClassLoader loader, 
+    Class<?>[] interfaces, 
+    InvocationHandler h 
+) throws IllegalArgumentException
+```
+
+1. class loader : `MyClass.class.getClassLoader()`
+2. interface : 불러올 인터페이스
+3. InvacationHandler : 프록시에서 수행할 작업 정의 
+    - `(proxy, method, arguments) -> {}`
+
+
+### 예제
+```java
+public interface BookService {
+    void printTitle(Book book);
+}
+```
+```java
+public class BookServiceImpl implements BookService{
+
+    @Override
+    public void printTitle(Book book) {
+        System.out.println("book.getTitle() = " + book.getTitle());
+    }
+}
+```
+```java
+BookService bookService = (BookService) Proxy.newProxyInstance(
+  BookService.class.getClassLoader(),
+    new Class[]{BookService.class},
+    (proxy, method, arguments) -> {
+        BookService realSubject = new BookServiceImpl();        // 실제 객체 생성
+        System.out.println("prev method invoke");               // 사전 작업
+        Object invoke = method.invoke(realSubject, arguments);  // 메소드 실행
+        System.out.println("after method invoke");              // 사후 작업
+        return invoke;
+    });
+```
+
+### InvocationHandler
+
+```java
+public class BookProxyHandler implements InvocationHandler {
+
+    Object target;
+
+    public BookProxyHandler(Object target) {
+        this.target = target;
+    }
+
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] argument) throws Throwable {
+        BookService realSubject = new BookServiceImpl();        // 실제 객체 생성
+        System.out.println("prev method invoke");               // 사전 작업
+        Object invoke = method.invoke(realSubject, arguments);  // 메소드 실행
+        System.out.println("after method invoke");              // 사후 작업
+        return invoke;
+    }
+}
+```
+
+# CGLib Proxy
+- `MyClassEnhancer.create()`
+
+``` java
+public class PrintLogInterceptor implements MethodInterceptor {
+    @Override
+    public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+        Object result = null;
+        System.out.println("****before log****");
+        result = methodProxy.invokeSuper(o, objects);
+        System.out.println("****after log****");
+        return result;
+    }
+}
+```
+
+
+
+
+### 출처
+https://velog.io/@dev_leewoooo/Dynamic-Proxy%EB%9E%80
